@@ -1837,6 +1837,47 @@ test info-30.48 {Bug 2850901} testevalex {
 ][reduce [info frame 0]]} ; # line 2 of the eval
 } {type eval line 2 cmd {info frame 0} proc ::tcltest::RunTest}
 
+
+# -------------------------------------------------------------------------
+# literal sharing 2, bug 2933089
+
+test info-39.1 {location information not confused by literal sharing, bug 2933089} -setup {
+    set result {}
+
+    proc print_one {} {}
+    proc test_info_frame {} {
+	set x 1
+	set y x
+
+	if "$x != 1" {
+	} else {
+	    print_one
+	} ;#line 1855^
+
+	if "$$y != 1" {
+	} else {
+	    print_one
+	} ;#line 1860^
+	# Do not put the comments listing the line numbers into the
+	# branches. We need shared literals, and the comments would
+	# make them different, thus unshared.
+    }
+
+    proc get_frame_info { cmd_str op } {
+	lappend ::result [reduce [eval {info frame -3}]]
+    }
+    trace add execution print_one enter get_frame_info
+} -body {
+    test_info_frame;
+    join $result \n
+} -cleanup {
+    trace remove execution print_one enter get_frame_info
+    rename get_frame_info {}
+    rename test_info_frame {}
+    rename print_one {}
+} -result {type source line 1855 file info.test cmd print_one proc ::test_info_frame level 1
+type source line 1860 file info.test cmd print_one proc ::test_info_frame level 1}
+
 # -------------------------------------------------------------------------
 unset -nocomplain res
 
